Bug 885538 - Fix clang compile failure in nsMsgSearchTerm.cpp by using an empty string instead of null pointer. r=rkent, a=Standard8